Resolving IE8 bug, z-index needs to be specified inline or child elements will be ignored if the parent has a filter set.

--- a/sugarcrm/themes/Sugar/css/style.css
+++ b/sugarcrm/themes/Sugar/css/style.css
@@ -5660,7 +5660,6 @@ padding:0px;
 position: fixed;
 top: 0;
 width:100%;
-z-index: 20;
 }
 #globalLinksSubnav, #quickCreateULSubnav {
     z-index: 20;
